Fixed responsive layout problem

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -114,7 +114,7 @@ nav ul li a {
 }
 #main ul.shows > li {
 	border-bottom: 1px solid #CCCCCC;
-	padding: 5px;
+	padding: 10px;
 	position: relative;
 }
 
@@ -125,13 +125,28 @@ nav ul li a {
 	cursor: pointer;
 	height: 16px;
 	position: absolute;
-	right: 5px;
-	top: 5px;
+	right: 7px;
+	top: 14px;
 	width: 16px;
 }
 
+#main ul.shows a.show {
+	display: block;
+	font-size: 20px;
+	font-weight: bold;
+	max-width: 90%;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+}
+
 #main ul.seasons {
-	padding-left: 20px;
+	margin: 10px 0px;
+}
+
+#main ul.seasons a.season {
+	font-size: 15px;
+	padding: 10px 0px;
 }
 
 #modal {
@@ -156,6 +171,7 @@ nav ul li a {
 
 footer {
 	bottom: 0px;
+	display: none;
 	font-size: 10px;
 	height: 20px;
 	left: 0px;
@@ -164,7 +180,8 @@ footer {
 }
 
 #main ul.episodes {
-	padding-left: 20px;
+	padding-left: 0px;
+	margin: 10px;
 }
 
 ul.episodes li {
@@ -201,6 +218,7 @@ ul.episodes li span.duration {
 	width: 50px;
 }
 ul.episodes li span.date {
+	display: none;
 	text-align: right;
 	width: 100px;
 }
